@@ -10,16 +10,15 @@ import com.postech.fiap.fase5.api.repositories.HistoricoConsumoRepository;
 import com.postech.fiap.fase5.api.repositories.LoteInventarioRepository;
 import com.postech.fiap.fase5.api.repositories.PontoDispensacaoRepository;
 import com.postech.fiap.fase5.api.validations.ConsumoValidation;
-import org.junit.jupiter.api.BeforeEach;
+import com.postech.fiap.fase5.infrastructure.exceptions.ApplicationNotFoundException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -40,295 +39,424 @@ class RegistrarConsumoUseCaseTest {
     private PontoDispensacaoRepository pontoDispensacaoRepository;
 
     @Mock
-    private ConsumoValidation validation;
+    private ConsumoValidation validation1;
 
+    @Mock
+    private ConsumoValidation validation2;
+
+    @InjectMocks
     private RegistrarConsumoUseCase registrarConsumoUseCase;
 
-    @BeforeEach
-    void setUp() {
+    @Test
+    void deveRegistrarConsumoComSucesso() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 10;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 50);
+
+        List<ConsumoValidation> validations = List.of(validation1, validation2);
         registrarConsumoUseCase = new RegistrarConsumoUseCase(
                 loteInventarioRepository,
                 historicoConsumoRepository,
                 pontoDispensacaoRepository,
-                Collections.singletonList(validation)
+                validations
         );
-    }
 
-    @Test
-    void deveRegistrarConsumoComSucessoQuandoDadosValidos() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId = 10L;
-        Integer quantidadeConsumida = 50;
-        Integer quantidadeDisponivel = 150;
-        LocalDateTime dataHoraEvento = LocalDateTime.of(2026, 2, 10, 10, 30);
-
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
-        Lote lote = criarLote(loteId, "LOTE001");
-        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, lote, quantidadeDisponivel);
-
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(loteId, quantidadeConsumida, dataHoraEvento);
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
-
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
                 .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId))
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
                 .thenReturn(Optional.of(loteInventario));
         when(loteInventarioRepository.save(any(LoteInventario.class)))
-                .thenReturn(loteInventario);
+                .thenAnswer(invocation -> invocation.getArgument(0));
         when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
-                .thenReturn(new HistoricoConsumo());
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
         registrarConsumoUseCase.execute(registroConsumo, clientId);
 
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository).findById(pontoDispensacaoId);
-        verify(loteInventarioRepository).findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId);
+        verify(validation1).validate(registroConsumo, clientId);
+        verify(validation2).validate(registroConsumo, clientId);
+        verify(pontoDispensacaoRepository).findByClientIdAndCnes(clientId, cnes);
+        verify(loteInventarioRepository).findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote);
+        verify(loteInventarioRepository).save(any(LoteInventario.class));
+        verify(historicoConsumoRepository).save(any(HistoricoConsumo.class));
+    }
+
+    @Test
+    void deveAtualizarQuantidadeInventarioCorretamente() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 15;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 100);
+
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
+                .thenReturn(Optional.of(pontoDispensacao));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
+                .thenReturn(Optional.of(loteInventario));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        registrarConsumoUseCase.execute(registroConsumo, clientId);
 
         ArgumentCaptor<LoteInventario> loteCaptor = ArgumentCaptor.forClass(LoteInventario.class);
         verify(loteInventarioRepository).save(loteCaptor.capture());
-        assertEquals(quantidadeDisponivel - quantidadeConsumida, loteCaptor.getValue().getQuantidade());
 
-        ArgumentCaptor<HistoricoConsumo> historicoCaptor = ArgumentCaptor.forClass(HistoricoConsumo.class);
-        verify(historicoConsumoRepository).save(historicoCaptor.capture());
-        HistoricoConsumo historicoSalvo = historicoCaptor.getValue();
-        assertEquals(pontoDispensacao, historicoSalvo.getPontoDispensacao());
-        assertEquals(lote, historicoSalvo.getLote());
-        assertEquals(quantidadeConsumida, historicoSalvo.getQuantidade());
-        assertEquals(dataHoraEvento, historicoSalvo.getDataHora());
+        LoteInventario loteAtualizado = loteCaptor.getValue();
+        assertEquals(85, loteAtualizado.getQuantidade());
     }
 
     @Test
-    void deveRegistrarMultiplosItensDeConsumoComSucesso() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId1 = 10L;
-        Long loteId2 = 20L;
-        Integer quantidadeConsumida1 = 30;
-        Integer quantidadeConsumida2 = 40;
-        Integer quantidadeDisponivel1 = 100;
-        Integer quantidadeDisponivel2 = 200;
-        LocalDateTime dataHoraEvento = LocalDateTime.of(2026, 2, 10, 14, 0);
+    void deveRegistrarHistoricoConsumoCorretamente() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 20;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
 
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
-        Lote lote1 = criarLote(loteId1, "LOTE001");
-        Lote lote2 = criarLote(loteId2, "LOTE002");
-        LoteInventario loteInventario1 = criarLoteInventario(1L, pontoDispensacao, lote1, quantidadeDisponivel1);
-        LoteInventario loteInventario2 = criarLoteInventario(2L, pontoDispensacao, lote2, quantidadeDisponivel2);
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
 
-        ItemConsumoDTO itemConsumo1 = new ItemConsumoDTO(loteId1, quantidadeConsumida1, dataHoraEvento);
-        ItemConsumoDTO itemConsumo2 = new ItemConsumoDTO(loteId2, quantidadeConsumida2, dataHoraEvento);
-        List<ItemConsumoDTO> listaConsumo = Arrays.asList(itemConsumo1, itemConsumo2);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 100);
 
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
                 .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId1))
-                .thenReturn(Optional.of(loteInventario1));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId2))
-                .thenReturn(Optional.of(loteInventario2));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
+                .thenReturn(Optional.of(loteInventario));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
         registrarConsumoUseCase.execute(registroConsumo, clientId);
 
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository).findById(pontoDispensacaoId);
+        ArgumentCaptor<HistoricoConsumo> historicoCaptor = ArgumentCaptor.forClass(HistoricoConsumo.class);
+        verify(historicoConsumoRepository).save(historicoCaptor.capture());
+
+        HistoricoConsumo historico = historicoCaptor.getValue();
+        assertEquals(pontoDispensacao, historico.getPontoDispensacao());
+        assertEquals(loteInventario.getLote(), historico.getLote());
+        assertEquals(quantidadeConsumida, historico.getQuantidade());
+        assertEquals(dataHoraEvento, historico.getDataHora());
+    }
+
+    @Test
+    void deveProcessarMultiplosItensConsumo() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO item1 = new ItemConsumoDTO("LOTE001", 10, dataHoraEvento);
+        ItemConsumoDTO item2 = new ItemConsumoDTO("LOTE002", 5, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(item1, item2));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario1 = criarLoteInventario(1L, pontoDispensacao, "LOTE001", 50);
+        LoteInventario loteInventario2 = criarLoteInventario(2L, pontoDispensacao, "LOTE002", 30);
+
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
+                .thenReturn(Optional.of(pontoDispensacao));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, "LOTE001"))
+                .thenReturn(Optional.of(loteInventario1));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, "LOTE002"))
+                .thenReturn(Optional.of(loteInventario2));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        registrarConsumoUseCase.execute(registroConsumo, clientId);
+
         verify(loteInventarioRepository, times(2)).save(any(LoteInventario.class));
         verify(historicoConsumoRepository, times(2)).save(any(HistoricoConsumo.class));
     }
 
     @Test
     void deveLancarExcecaoQuandoPontoDispensacaoNaoEncontrado() {
-        Long pontoDispensacaoId = 999L;
-        Long clientId = 100L;
+        Long clientId = 1L;
+        String cnes = "CNES999";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 10;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
 
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(10L, 50, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
 
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
                 .thenReturn(Optional.empty());
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
+        ApplicationNotFoundException exception = assertThrows(
+                ApplicationNotFoundException.class,
                 () -> registrarConsumoUseCase.execute(registroConsumo, clientId)
         );
 
         assertEquals("Ponto de Dispensação não encontrado.", exception.getMessage());
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository).findById(pontoDispensacaoId);
-        verify(loteInventarioRepository, never()).save(any(LoteInventario.class));
-        verify(historicoConsumoRepository, never()).save(any(HistoricoConsumo.class));
+        verify(pontoDispensacaoRepository).findByClientIdAndCnes(clientId, cnes);
+        verify(loteInventarioRepository, never()).save(any());
+        verify(historicoConsumoRepository, never()).save(any());
     }
 
     @Test
-    void deveLancarExcecaoQuandoLoteNaoEncontradoNoInventario() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId = 999L;
+    void deveLancarExcecaoQuandoLoteInventarioNaoEncontrado() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE999";
+        Integer quantidadeConsumida = 10;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
 
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
 
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(loteId, 50, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
 
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
                 .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId))
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
                 .thenReturn(Optional.empty());
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
+        ApplicationNotFoundException exception = assertThrows(
+                ApplicationNotFoundException.class,
                 () -> registrarConsumoUseCase.execute(registroConsumo, clientId)
         );
 
-        assertEquals("Lote ID " + loteId + " não encontrado no inventário deste ponto.", exception.getMessage());
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository).findById(pontoDispensacaoId);
-        verify(loteInventarioRepository).findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId);
-        verify(loteInventarioRepository, never()).save(any(LoteInventario.class));
-        verify(historicoConsumoRepository, never()).save(any(HistoricoConsumo.class));
+        assertEquals("Lote ID " + numeroLote + " não encontrado no inventário deste ponto.", exception.getMessage());
+        verify(loteInventarioRepository, never()).save(any());
+        verify(historicoConsumoRepository, never()).save(any());
     }
 
     @Test
     void deveLancarExcecaoQuandoSaldoInsuficiente() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId = 10L;
-        Integer quantidadeConsumida = 200;
-        Integer quantidadeDisponivel = 50;
-
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
-        Lote lote = criarLote(loteId, "LOTE001");
-        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, lote, quantidadeDisponivel);
-
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(loteId, quantidadeConsumida, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
-
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
-                .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId))
-                .thenReturn(Optional.of(loteInventario));
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> registrarConsumoUseCase.execute(registroConsumo, clientId)
-        );
-
-        assertEquals("Saldo insuficiente para o lote " + loteId + ". Disponível: " + quantidadeDisponivel, exception.getMessage());
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository).findById(pontoDispensacaoId);
-        verify(loteInventarioRepository).findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId);
-        verify(loteInventarioRepository, never()).save(any(LoteInventario.class));
-        verify(historicoConsumoRepository, never()).save(any(HistoricoConsumo.class));
-    }
-
-    @Test
-    void deveAtualizarQuantidadeCorretamenteAposConsumo() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId = 10L;
-        Integer quantidadeConsumida = 75;
-        Integer quantidadeDisponivel = 100;
-        Integer quantidadeEsperada = 25;
-
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
-        Lote lote = criarLote(loteId, "LOTE001");
-        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, lote, quantidadeDisponivel);
-
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(loteId, quantidadeConsumida, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
-
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
-                .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId))
-                .thenReturn(Optional.of(loteInventario));
-
-        registrarConsumoUseCase.execute(registroConsumo, clientId);
-
-        ArgumentCaptor<LoteInventario> captor = ArgumentCaptor.forClass(LoteInventario.class);
-        verify(loteInventarioRepository).save(captor.capture());
-        assertEquals(quantidadeEsperada, captor.getValue().getQuantidade());
-    }
-
-    @Test
-    void deveZerarQuantidadeQuandoConsumoIgualAoDisponivel() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-        Long loteId = 10L;
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
         Integer quantidadeConsumida = 100;
-        Integer quantidadeDisponivel = 100;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
 
-        PontoDispensacao pontoDispensacao = criarPontoDispensacao(pontoDispensacaoId, "CNES001", clientId);
-        Lote lote = criarLote(loteId, "LOTE001");
-        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, lote, quantidadeDisponivel);
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
 
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(loteId, quantidadeConsumida, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 50);
 
-        when(pontoDispensacaoRepository.findById(pontoDispensacaoId))
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
                 .thenReturn(Optional.of(pontoDispensacao));
-        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteId(pontoDispensacaoId, loteId))
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
                 .thenReturn(Optional.of(loteInventario));
 
-        registrarConsumoUseCase.execute(registroConsumo, clientId);
-
-        ArgumentCaptor<LoteInventario> captor = ArgumentCaptor.forClass(LoteInventario.class);
-        verify(loteInventarioRepository).save(captor.capture());
-        assertEquals(0, captor.getValue().getQuantidade());
-    }
-
-    @Test
-    void deveExecutarTodasAsValidacoesAntesDeProcessar() {
-        Long pontoDispensacaoId = 1L;
-        Long clientId = 100L;
-
-        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(10L, 50, LocalDateTime.now());
-        List<ItemConsumoDTO> listaConsumo = Collections.singletonList(itemConsumo);
-        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(pontoDispensacaoId, listaConsumo);
-
-        doThrow(new IllegalArgumentException("Validação falhou"))
-                .when(validation).validate(registroConsumo, clientId);
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
+        ApplicationNotFoundException exception = assertThrows(
+                ApplicationNotFoundException.class,
                 () -> registrarConsumoUseCase.execute(registroConsumo, clientId)
         );
 
-        assertEquals("Validação falhou", exception.getMessage());
-        verify(validation).validate(registroConsumo, clientId);
-        verify(pontoDispensacaoRepository, never()).findById(anyLong());
-        verify(loteInventarioRepository, never()).save(any(LoteInventario.class));
-        verify(historicoConsumoRepository, never()).save(any(HistoricoConsumo.class));
+        assertTrue(exception.getMessage().contains("Saldo insuficiente para o lote"));
+        assertTrue(exception.getMessage().contains("Disponível: 50"));
+        verify(loteInventarioRepository, never()).save(any());
+        verify(historicoConsumoRepository, never()).save(any());
     }
 
-    private PontoDispensacao criarPontoDispensacao(Long id, String cnes, Long clientId) {
-        PontoDispensacao pontoDispensacao = new PontoDispensacao();
-        pontoDispensacao.setId(id);
-        pontoDispensacao.setCnes(cnes);
-        pontoDispensacao.setNome("Ponto Teste");
-        pontoDispensacao.setTipo("UBS");
-        pontoDispensacao.setClientId(clientId);
-        return pontoDispensacao;
+    @Test
+    void deveValidarSaldoExatoSemLancarExcecao() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 50;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 50);
+
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
+                .thenReturn(Optional.of(pontoDispensacao));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
+                .thenReturn(Optional.of(loteInventario));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        assertDoesNotThrow(() -> registrarConsumoUseCase.execute(registroConsumo, clientId));
+
+        ArgumentCaptor<LoteInventario> loteCaptor = ArgumentCaptor.forClass(LoteInventario.class);
+        verify(loteInventarioRepository).save(loteCaptor.capture());
+
+        LoteInventario loteAtualizado = loteCaptor.getValue();
+        assertEquals(0, loteAtualizado.getQuantidade());
     }
 
-    private Lote criarLote(Long id, String numeroLote) {
+    @Test
+    void deveExecutarTodasValidacoesAntesDeProcessar() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 10;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 50);
+
+        List<ConsumoValidation> validations = List.of(validation1, validation2);
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
+                .thenReturn(Optional.of(pontoDispensacao));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
+                .thenReturn(Optional.of(loteInventario));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        registrarConsumoUseCase.execute(registroConsumo, clientId);
+
+        verify(validation1, times(1)).validate(registroConsumo, clientId);
+        verify(validation2, times(1)).validate(registroConsumo, clientId);
+    }
+
+    @Test
+    void deveProcessarConsumoComQuantidadeZeroNoInventarioAposConsumoTotal() {
+        Long clientId = 1L;
+        String cnes = "CNES001";
+        String numeroLote = "LOTE001";
+        Integer quantidadeConsumida = 25;
+        LocalDateTime dataHoraEvento = LocalDateTime.now();
+
+        ItemConsumoDTO itemConsumo = new ItemConsumoDTO(numeroLote, quantidadeConsumida, dataHoraEvento);
+        RegistroConsumoDTO registroConsumo = new RegistroConsumoDTO(cnes, List.of(itemConsumo));
+
+        PontoDispensacao pontoDispensacao = criarPontoDispensacao(1L, cnes, "Ponto 1", clientId);
+        LoteInventario loteInventario = criarLoteInventario(1L, pontoDispensacao, numeroLote, 25);
+
+        List<ConsumoValidation> validations = List.of();
+        registrarConsumoUseCase = new RegistrarConsumoUseCase(
+                loteInventarioRepository,
+                historicoConsumoRepository,
+                pontoDispensacaoRepository,
+                validations
+        );
+
+        when(pontoDispensacaoRepository.findByClientIdAndCnes(clientId, cnes))
+                .thenReturn(Optional.of(pontoDispensacao));
+        when(loteInventarioRepository.findByPontoDispensacaoIdAndLoteNumeroLote(1L, numeroLote))
+                .thenReturn(Optional.of(loteInventario));
+        when(loteInventarioRepository.save(any(LoteInventario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(historicoConsumoRepository.save(any(HistoricoConsumo.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        registrarConsumoUseCase.execute(registroConsumo, clientId);
+
+        ArgumentCaptor<LoteInventario> loteCaptor = ArgumentCaptor.forClass(LoteInventario.class);
+        verify(loteInventarioRepository).save(loteCaptor.capture());
+
+        LoteInventario loteAtualizado = loteCaptor.getValue();
+        assertEquals(0, loteAtualizado.getQuantidade());
+
+        verify(historicoConsumoRepository).save(any(HistoricoConsumo.class));
+    }
+
+    private PontoDispensacao criarPontoDispensacao(Long id, String cnes, String nome, Long clientId) {
+        PontoDispensacao ponto = new PontoDispensacao();
+        ponto.setId(id);
+        ponto.setCnes(cnes);
+        ponto.setNome(nome);
+        ponto.setTipo("Hospital");
+        ponto.setClientId(clientId);
+        return ponto;
+    }
+
+    private LoteInventario criarLoteInventario(Long id, PontoDispensacao pontoDispensacao, String numeroLote, Integer quantidade) {
         Lote lote = new Lote();
         lote.setId(id);
         lote.setNumeroLote(numeroLote);
-        return lote;
-    }
 
-    private LoteInventario criarLoteInventario(Long id, PontoDispensacao pontoDispensacao, Lote lote, Integer quantidade) {
         LoteInventario loteInventario = new LoteInventario();
         loteInventario.setId(id);
         loteInventario.setPontoDispensacao(pontoDispensacao);
         loteInventario.setLote(lote);
         loteInventario.setQuantidade(quantidade);
+        loteInventario.setDataHoraChegada(LocalDateTime.now());
         return loteInventario;
     }
 }
